# uwu

./: .gitignore  Cargo.toml  LICENSE  README.md  SAFE.md  ast.rs  codegen.rs  compiler.rs  diagnostics.rs  dot.uwu  env.rs  lib.rs  macros.rs  package.json  parser.rs  scanner.rs  spec.uwu  tokenizer.rs  tokens.rs  types.rs  x.rb
.github/workflows/: build.yml
bot/: README.md  deps.ts  main.ts
crates/uwu-cli/: Cargo.toml
crates/uwu-cli/src/: main.rs
crates/uwu-core/: Cargo.toml
crates/uwu-core/src/: context.rs  lib.rs  parser.rs  parser_diagnostics.rs  scanner.rs  scope.rs
crates/uwu-wasm/: Cargo.toml  build.sh  build_deno.ts  package.json  wasm.js
crates/uwu-wasm/examples/: scan_scope.js
crates/uwu-wasm/src/: lib.rs
docs/: FAQ.md  OVERVIEW.md  SYNTAX.md
examples/: nft.uwu  pst.uwu
lib/: build.js  index.ts
spec/: assignop.uwu  call.uwu  chk.uwu  fn.uwu  if.uwu  mut.uwu  regexp.uwu  selector.uwu  types.uwu  variables.uwu
tests/: Cargo.toml  allow_local_decl.js  no_iife.js
tests/cases/: allow_local_decl.js  computed_member_expr.js  iife.000.d.json  iife.000.js  none.js
tests/js/: scanTx.js
tests/src/: lib.rs
uc/: Cargo.toml  main.rs
wasm/: Cargo.toml  README.md  wasm.js
wasm/src/: lib.rs
wasm/tests/: test_compile.js
