[package]
name = "uwu"
version = "0.1.0"
authors = ["littledivy <dj.srivastava23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.0"
swc_common = { version = "0.10.0", features = ["tty-emitter"] }
swc_ecmascript = { version = "0.18.4", features = ["parser", "utils", "visit"] }

[lib]
name = "uwu"
path = "lib.rs"

[[bin]]
name = "uc"
path = "uc/main.rs"
