[package]
name = "uwu_wasm"
version = "0.1.0"
authors = ["littledivy <dj.srivastava23@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.70"
wee_alloc = { version = "0.4.2", optional = true }
uwu = { path = "../" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
