[package]
name = "uwu_cli"
version = "0.1.0"
authors = ["littledivy <dj.srivastava23@gmail.com>"]
edition = "2018"

[dependencies]
codespan-reporting = "0.11.0"
swc_ecmascript = { version = "0.18.4", features = ["parser", "utils", "visit"] }
uwu = { path = "../uwu-core" }
[[bin]]
name = "uc"
path = "src/main.rs"